# rocci

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  justfile  mkdocs.yml  pyproject.toml  rocci_spec.md  rocci_spec_appendix.md  rust-toolchain.toml  versions.json
.claude/: settings.json
.claude/agents/: comment-auditor.md
.claude/hooks/: fix-on-save.sh  pr-security-gate.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  docs.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  gates.yml  wheels.yml
0.1/: 404.html  index.html  sitemap.xml
0.1/api/: index.html
0.1/changelog/: index.html
0.1/contributing/: index.html
0.1/faq/: index.html
0.1/getting-started/installation/: index.html
0.1/getting-started/quickstart/: index.html
0.1/guide/diagnostics/: index.html
0.1/guide/performance/: index.html
0.1/guide/reading-the-band/: index.html
0.1/guide/which-band/: index.html
0.1/guide/your-data/: index.html
0.1/method/envelope/: index.html
0.1/method/theory/: index.html
0.1/search/: search_index.json
0.1/vignettes/01-quickstart-sklearn/: 01-quickstart-sklearn.md  index.html
0.1/vignettes/02-deep-learning-scores/: index.html
0.1/vignettes/03-bayesian-workflow/: index.html
0.1/vignettes/04-anatomy-of-the-band/: index.html
0.2/: 404.html  index.html  sitemap.xml
0.2/api/: index.html
0.2/changelog/: index.html
0.2/contributing/: index.html
0.2/faq/: index.html
0.2/getting-started/installation/: index.html
0.2/getting-started/quickstart/: index.html
0.2/guide/diagnostics/: index.html
0.2/guide/performance/: index.html
0.2/guide/reading-the-band/: index.html
0.2/guide/which-band/: index.html
0.2/guide/your-data/: index.html
0.2/javascripts/: katex.js
0.2/method/envelope/: index.html
0.2/method/simulations/: index.html
0.2/method/theory/: index.html
0.2/method/verification/: index.html
0.2/search/: search_index.json
0.2/vignettes/01-quickstart-sklearn/: index.html
0.2/vignettes/02-deep-learning-scores/: 02-deep-learning-scores.md  index.html
0.2/vignettes/03-bayesian-workflow/: index.html
0.2/vignettes/04-anatomy-of-the-band/: index.html
0.2/vignettes/data/: posterior_draws.npz
0.3/: 404.html  index.html  objects.inv  sitemap.xml
0.3/api/: index.html
0.3/changelog/: index.html
0.3/contributing/: index.html
0.3/faq/: index.html
0.3/getting-started/installation/: index.html
0.3/getting-started/quickstart/: index.html
0.3/guide/performance/: index.html
0.3/guide/reading-the-band/: index.html
0.3/guide/which-band/: index.html
0.3/guide/your-data/: index.html
0.3/method/envelope/: index.html
0.3/method/simulations/: index.html
0.3/method/theory/: index.html
0.3/method/verification/: index.html
0.3/search/: search_index.json
0.3/vignettes/01-quickstart-sklearn/: index.html
0.3/vignettes/02-deep-learning-scores/: 02-deep-learning-scores.md  index.html
0.3/vignettes/03-bayesian-workflow/: 03-bayesian-workflow.md  index.html
0.3/vignettes/04-anatomy-of-the-band/: index.html
benchmarks/: run_benchmarks.py
docs/: api.md  faq.md  index.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: diagnostics.md  performance.md  reading-the-band.md  which-band.md  your-data.md
docs/method/: envelope.md  simulations.md  theory.md  verification.md
docs/vignettes/: 01-quickstart-sklearn.md  02-deep-learning-scores.md
docs/vignettes/data/: dl_scores.npz
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/api/: index.html
latest/changelog/: index.html
latest/contributing/: index.html
latest/faq/: index.html
latest/getting-started/installation/: index.html
latest/getting-started/quickstart/: index.html
latest/guide/diagnostics/: index.html
latest/guide/performance/: index.html
latest/guide/reading-the-band/: index.html
latest/guide/which-band/: index.html
latest/guide/your-data/: index.html
latest/method/envelope/: index.html
latest/method/simulations/: index.html
latest/method/theory/: index.html
latest/method/verification/: index.html
latest/search/: search_index.json
latest/vignettes/01-quickstart-sklearn/: 01-quickstart-sklearn.md  index.html
latest/vignettes/02-deep-learning-scores/: index.html
latest/vignettes/03-bayesian-workflow/: index.html
latest/vignettes/04-anatomy-of-the-band/: 04-anatomy-of-the-band.md  index.html
python/rocci/: __init__.py  _api.py  _core.pyi  _exceptions.py  _result.py  _validation.py  _warnings.py  ingest.py  plotting.py
python/rocci/backend/: __init__.py  _fallback.py
python/rocci/band/: __init__.py  envelope.py  floors.py  grids.py  normal.py
python/rocci/special/: __init__.py  _beta.py  _chi2.py  _dagostino.py  _normal.py  _shapiro_francia.py
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: make_docs_assets.py  record_golden_masters.py  release_prep.py
tests/: __init__.py  conftest.py  test_api.py  test_backend.py  test_calibration.py  test_envelope.py  test_fallback_kernel.py  test_floors.py  test_golden_master.py  test_grids.py  test_ingest.py  test_normal.py  test_optional_deps.py  test_ovr.py  test_plotting.py  test_properties.py  test_rust_backend.py  test_special.py  test_statistics.py
tests/fixtures/golden/: PROVENANCE.md  heavy_ties_200_200.npz  high_auc_300_300.npz  n10k_5000_5000.npz  small_n_30_30.npz  unbalanced_50_500.npz
